fixed docs button spacing

--- a/app/elements/edit-pages/script-edit/script-edit.css
+++ b/app/elements/edit-pages/script-edit/script-edit.css
@@ -34,3 +34,19 @@ script-edit #settingsContainer {
 #triggerOverflowContainer {
 	overflow: hidden;
 }
+
+paper-button.blue {
+    background-color: #3F51B5;
+    color: white;
+}
+
+.editorTitle {
+	display: -webkit-flex;
+	display: flex;
+	-webkit-justify-content: space-between;
+	justify-content: space-between;
+}
+
+#docsLink {
+	font-size: 130%;
+}
